Closed
Bug 1691484
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::net::nsHttpConnectionInfo::CloneAndAdoptHTTPSSVCRecord]
Categories
(Core :: Networking, defect, P1)
Core
Networking
Tracking
()
RESOLVED
FIXED
87 Branch
| Tracking | Status | |
|---|---|---|
| firefox87 | --- | fixed |
People
(Reporter: furkan, Assigned: kershaw)
Details
(Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file)
Maybe Fission related. (DOMFissionEnabled=1)
Crash report: https://crash-stats.mozilla.org/report/index/5f1d05a0-1052-4804-9b41-c6b060210208
Reason: SIGSEGV /SEGV_MAPERR
Top 10 frames of crashing thread:
0 libxul.so mozilla::net::nsHttpConnectionInfo::CloneAndAdoptHTTPSSVCRecord const netwerk/protocol/http/nsHttpConnectionInfo.cpp:321
1 libxul.so mozilla::net::nsHttpTransaction::PrepareFastFallbackConnInfo netwerk/protocol/http/nsHttpTransaction.cpp:1220
2 libxul.so mozilla::net::nsHttpTransaction::OnFastFallbackTimer netwerk/protocol/http/nsHttpTransaction.cpp:3211
3 libxul.so mozilla::net::nsHttpTransaction::Notify netwerk/protocol/http/nsHttpTransaction.cpp:3267
4 libxul.so {virtual override thunk}
5 libxul.so nsTimerEvent::Run xpcom/threads/TimerThread.cpp:252
6 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1152
7 libxul.so NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:548
8 libxul.so mozilla::net::nsSocketTransportService::Run netwerk/base/nsSocketTransportService2.cpp:1196
9 libxul.so {virtual override thunk}
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → kershaw
Severity: -- → S3
Priority: -- → P1
Whiteboard: [necko-triaged]
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2165e9538017
Avoid crashing when we don't have other service mode records to retry r=necko-reviewers,dragana
Comment 3•5 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 5 years ago
status-firefox87:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•