Bug 1691484 - Avoid crashing when we don't have other service mode records to retry r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D104451